Fix list centering
Set left and right padding to be equal for lists to fix them being
not centered.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,8 @@ ul,
 ol {
     list-style-position: inside;
     margin: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 a {
@@ -56,7 +58,6 @@ p {
     text-align: center;
     list-style-type: none;
     margin-left: 0;
-    padding: 0;
 }
 
 .recipes a,
